<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/beige">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="546dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal" />


        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/user_circle" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="242dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/texto"
                android:hint="@string/mail"
                android:inputType="text"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:textAlignment="center"
                app:srcCompat="@drawable/lock_square_rounded" />

            <EditText
                android:id="@+id/editTextText6"
                style="@style/EditTextWithBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/texto"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:textSize="17sp"
            android:text="@string/olvidoPassword"
            android:fontFamily="@font/texto"
            android:textAlignment="textEnd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/botones"
                android:fontFamily="@font/texto"
                android:textSize="20sp"
                android:text="@string/signUp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/botones"
                android:fontFamily="@font/texto"
                android:textSize="20sp"
                android:text="@string/signIn" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/inicioSesion"
        android:layout_width="297dp"
        android:layout_height="57dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/titulo"
        android:text="@string/inicio_sesion"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toTopOf="@+id/inicioSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blade" />

</androidx.constraintlayout.widget.ConstraintLayout>